--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^4.7.0",
+    "@material-ui/icons": "^4.5.1",
     "gatsby": "^2.17.11",
+    "gatsby-background-image": "^0.9.6",
     "gatsby-image": "^2.2.31",
     "gatsby-plugin-manifest": "^2.2.27",
+    "gatsby-plugin-netlify-cms": "^4.1.28",
     "gatsby-plugin-offline": "^3.0.19",
     "gatsby-plugin-react-helmet": "^3.1.14",
     "gatsby-plugin-sharp": "^2.2.37",
     "gatsby-source-filesystem": "^2.1.36",
+    "gatsby-theme-material-ui": "^1.0.5",
     "gatsby-transformer-sharp": "^2.3.3",
+    "netlify-cms-app": "^2.9.7",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
